<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- app -->
    <string name="app_name">Political Preparedness</string>
    <string name="connection_error">Connection error!</string>
    <string name="loading_data">Loading data from internet</string>
    <string name="permission_alert_dialog_title">Location permission</string>
    <string name="permission_alert_dialog_message">The app needs to access to your current location: go to the Settings app and grant all the location permissions</string>
    <string name="permission_alert_dialog_negative_button">Cancel</string>
    <string name="permission_alert_dialog_positive_button">Go to settings</string>
    <string name="device_location_toast_error_message">"Error getting location settings resolution: %s"</string>
    <string name="device_location_alert_dialog_title">Enable device location</string>
    <string name="device_location_alert_dialog_message">The app needs to access to your current location: activate the device location from the notification bar</string>
    <string name="device_location_alert_dialog_positive_button">OK</string>
    <string name="current_location_toast_error_message">Error in retrieving your current location: try again from a different position</string>

    <!-- launch fragment -->
    <string name="ballot_logo_content_description">Image with ballot for political elections</string>
    <string name="representative_button_text">Find my representatives</string>
    <string name="upcoming_button_text">Upcoming elections</string>

    <!-- election fragment -->
    <string name="elections_fragment_label">Elections</string>
    <string name="upcoming_list_title">UPCOMING</string>
    <string name="saved_list_title">FOLLOWING</string>
    <string name="clear_list">Clear the entire list of saved elections</string>
    <string name="clear_following_list_option">Clear following list</string>
    <string name="clearing_title">Clearing all</string>
    <string name="clearing_message">You are not following any election anymore</string>

    <!-- voter info fragment -->
    <string name="follow_election">Follow the election</string>
    <string name="unfollow_election">Unfollow the election</string>
    <string name="following_title">Following</string>
    <string name="unfollowing_title">Unfollowing</string>
    <string name="following_message">You are following the election %s</string>
    <string name="unfollowing_message">You are not following the election %s anymore</string>

    <!-- representative list fragment -->
    <string name="representatives_fragment_label">Representatives</string>
    <string name="search_form">Search form</string>
    <string name="address_line_1">Address (line 1)</string>
    <string name="address_line_2">Address (line 2)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="representatives_list_title">MY REPRESENTATIVES</string>
    <string name="representative_profile_image">Representative profile image</string>
    <string name="twitter_profile_link">Twitter profile link</string>
    <string name="facebook_profile_link">Facebook profile link</string>
    <string name="website_link">Website link</string>
    <string name="scrolling_position">KEY_SCROLLING_POSITION</string>
    <string name="current_motion_state">KEY_CURRENT_MOTION_STATE</string>
    <string name="representative_list_key">KEY_REPRESENTATIVES_LIST</string>
    <string name="form_not_filled_title">Form not filled correctly</string>
    <string name="form_not_filled_message">Please, fill the \"%s\" entry to correctly search the representatives</string>

</resources>
