<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="representativeViewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene"
        app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/search_form"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/list_title_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            android:text="@={representativeViewModel.line1}" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            android:text="@={representativeViewModel.line2}" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@={representativeViewModel.city}" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:stateValue="@{representativeViewModel.state}" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/zip_code"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={representativeViewModel.zip}" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="@{() -> representativeViewModel.onFindMyRepresentativesClicked()}"
            android:text="@string/find_my_representatives"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="@{() -> representativeViewModel.onUseMyLocationClicked()}"
            android:text="@string/use_my_location"
            android:textColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_margin"
            android:scrollbars="vertical"
            app:header="@{@string/representatives_list_title}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location"
            app:listData="@{representativeViewModel.representativeList}" />

        <ImageView
            android:id="@+id/loading_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/loading_data"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location"
            app:srcCompat="@drawable/loading_animation" />

        <ImageView
            android:id="@+id/connection_error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/connection_error"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location"
            app:srcCompat="@drawable/ic_connection_error" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>